working on this

--- a/lineage_visualization.html
+++ b/lineage_visualization.html
@@ -62,12 +62,12 @@
               <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" aria-labelledby="treatment_selector">
-              <li><a value="control" href="#">Control</a></li>
-              <li><a value="baseline" href="#">Baseline</a></li>
-              <li><a value="short_environment_cycle" href="#">Short Environment Cycle Length</a></li>
-              <li><a value="long_environment_cycle" href="#">Long Environment Cycle Length</a></li>
-              <li><a value="low_mut" href="#">Low Mutation Rate</a></li>
-              <li><a value="high_mut" href="#">High Mutation Rate</a></li>
+              <li><a value="io-sense-control" href="#">Control</a></li>
+              <li><a value="io-sense-only" href="#">Baseline</a></li>
+              <li><a value="io-sense-cycle-50" href="#">Short Environment Cycle Length</a></li>
+              <li><a value="io-sense-cycle-200" href="#">Long Environment Cycle Length</a></li>
+              <li><a value="io-sense-mut" href="#">Low Mutation Rate</a></li>
+              <li><a value="io-sense-mut-high" href="#">High Mutation Rate</a></li>
             </ul>
           </div>
         </div>
