Fixed canvas width scaling

--- a/lineage_visualization.html
+++ b/lineage_visualization.html
@@ -58,9 +58,6 @@
 
 
 
-      <div class="row">
-        <div class="well"><h2>Visualization</h2></div>
-      </div>
 
       <div class="row">
         <div class="col-md-12">
@@ -119,7 +116,15 @@
       </div> <!-- end row -->
 
       <div class="row">
-        <div id="chart_area"></div>
+        <div class="panel panel-default" id="vis_panel">
+          <div class="panel-heading">
+            <h2> Visualization </h2>
+          </div>
+          <div class="panel-body">
+            <div id="chart_area"></div>
+          </div>
+        </div>
+
       </div>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
