--- a/project_home.html
+++ b/project_home.html
@@ -16,7 +16,7 @@
         <h1>The Evolutionary Origins of Phenotypic Plasticity</h1>
       </div>
       <!-- Project Nav -->
-      <nav class="navbar">
+      <nav class="navbar navbar-lalejini">
         <div class="container-fluid">
           <ul class = "nav navbar-nav nav-justified">
             <li><a href="project_home.html" class="btn-lg " id="active_page">Project Home</a></li>
