Made poster page

--- a/poster-lineage_visualization.html
+++ b/poster-lineage_visualization.html
@@ -7,7 +7,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="sass/style.css"/>
+    <link rel="stylesheet" type="text/css" href="sass/poster-style.css"/>
   </head>
 
   <body>
@@ -24,6 +24,32 @@
       <div id="banner" class = "jumbotron">
         <h1>Visualization: The Evolutionary Origins of Phenotypic Plasticity</h1>
       </div>
+
+      <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+          <tr>
+            <td class="C0000">0000</td>
+            <td class="C0001">0001</td>
+            <td class="C0010">0010</td>
+            <td class="C0011">0011</td>
+            <td class="C0100">0100</td>
+            <td class="C0101">0101</td>
+            <td class="C0110">0110</td>
+            <td class="C0111">0111</td>
+          </tr>
+          <tr>
+            <td class="C1000">1000</td>
+            <td class="C1001">1001</td>
+            <td class="C1010">1010</td>
+            <td class="C1011">1011</td>
+            <td class="C1100">1100</td>
+            <td class="C1101">1101</td>
+            <td class="C1110">1110</td>
+            <td class="C1111">1111</td>
+          </tr>
+        </table>
+      </div>
+
 
       <div class="row">
         <div class = "col-md-6">
