--- a/project_home.html
+++ b/project_home.html
@@ -25,8 +25,75 @@
         </div>
       </nav>
 
+      <div class="row">
+        <div class="col-md-12">
+          <div class="well">
+            <p>Many effective and innovative survival mechanisms used by natural organisms rely on the capacity for <b>phenotypic plasticity</b>; that is, the ability of a genotype to alter how it is expressed based on the current environmental conditions. Understanding the evolution of phenotypic plasticity is an important step towards understanding the origins of many types of biological complexity, as well as to meeting challenges in evolutionary computation where dynamic solutions are required.
+            </p>
+            <p>
+            This research leverages the Avida Digital Evolution Platform to experimentally explore the selective pressures and evolutionary pathways that lead to phenotypic plasticity.
+            </p>
+          </div>
+        </div>
+      </div>
 
-    </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="panel panel-lalejini">
+            <div class="panel-heading" role="tab">
+              <h2>
+                <a class="collapsed" role="button" data-toggle="collapse" href="#collapseAbout" aria-expanded="false" aria-controls="collapseAbout">
+                   Background
+                </a>
+              </h2>
+            </div>
+            <div id="collapseAbout" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="about-heading">
+              <div class="panel-body">
+                <h2> What is phenotypic plasticity? </h2>
+                <b>Phenotypic plasticity</b> is the capaticity for a genotype to express different phenotypes in response to different environmental conditions.
+
+                <h2> When can phenotypic plasticity evolve? </h2>
+                From theoretical and empirical findings, Ghalambor <i>et al.</i> identify four conditions that are necessary for phenotypic plasticity to evolve:
+                <ol>
+                  <li>Populations are exposed to temporally or spatially varying environments</li>
+                  <li>Different environments are differentiable by reliable signals</li>
+                  <li>Different environments favor different phenotypes</li>
+                  <li>No single phenotype can exhibit high fitness across all environments</li>
+                </ol>
+              </div>
+            </div>
+          </div>
+        </div>
+
+       <div class="col-md-6">
+         <div class="panel panel-lalejini">
+           <div class="panel-heading" role="tab">
+             <h2>
+               <a class="collapsed" role="button" data-toggle="collapse" href="#collapseAbout" aria-expanded="false" aria-controls="collapseAbout">
+                  Research Questions
+               </a>
+             </h2>
+           </div>
+           <div id="collapseAbout" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="about-heading">
+             <div class="panel-body">
+               <h3>What is the step-by-step process by which phenotypic plasticity evolves?</h3>
+               <h4>What are the reoccurring themes as evolution progresses toward more plastic strategies?</h4>
+               <ul>
+                 <li>Do digital organisms evolve to express traits unconditionally before evolving to do so conditionally as a function of their environment?</li>
+                 <li>Do sub-optimal forms of plasticity evolve before more optimal forms of plasticity?</li>
+               </ul>
+               <h4>Are there genotypic or phenotypic patterns present in lineages leading to phenotypically plastic organisms?</h4>
+               <ul>
+                 <li>If we could visualize</li>
+               </ul>
+
+             </div>
+           </div>
+         </div>
+       </div>
+      </div>
+    </div> <!-- End background and motivation row -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   </body>
