--- a/project_home.html
+++ b/project_home.html
@@ -6,7 +6,7 @@
     <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="sass/style.css"/>
+    <!-- <link rel="stylesheet" type="text/css" href="sass/lineage_visualization_style.css"/> -->
   </head>
 
   <body>
@@ -16,16 +16,17 @@
         <h1>The Evolutionary Origins of Phenotypic Plasticity</h1>
       </div>
       <!-- Project Nav -->
-      <nav class="navbar navbar-lalejini">
+      <!-- <nav class="navbar navbar-lalejini">
         <div class="container-fluid">
           <ul class = "nav navbar-nav nav-justified">
             <li><a href="project_home.html" class="btn-lg " id="active_page">Project Home</a></li>
             <li><a href="lineage_visualization.html" class = "btn-lg ">Lineage Visualization</a></li>
           </ul>
         </div>
-      </nav>
+      </nav> -->
 
-      <div class="row">
+      <div class="well"> <p> I'll make this page at some point. </p> </div>
+      <!-- <div class="row">
         <div class="col-md-12">
           <div class="well">
             <p>Many effective and innovative survival mechanisms used by natural organisms rely on the capacity for <b>phenotypic plasticity</b>; that is, the ability of a genotype to alter how it is expressed based on the current environmental conditions. Understanding the evolution of phenotypic plasticity is an important step towards understanding the origins of many types of biological complexity, as well as to meeting challenges in evolutionary computation where dynamic solutions are required.
@@ -91,8 +92,9 @@
            </div>
          </div>
        </div>
-      </div>
-    </div> <!-- End background and motivation row -->
+      </div> -->
+
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
