--- a/lineage_visualization.html
+++ b/lineage_visualization.html
@@ -74,7 +74,7 @@
             <div id="collapseLegend" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="legend-heading">
               <div class="panel-body" id="legend-panel-body">
                 <div class ="img-default" id="lineage_vis_legend">
-                  <img src="imgs/RECOLOR-task-profiles.png" alt="Legend" class="img-responsive"></img>
+                  <img src="imgs/task-profiles.png" alt="Legend" class="img-responsive"></img>
                 </div>
                 <div class="text-box">
                   <p>Enumeration of all possible phenotypic states. Each row represents a distinct phenotype. A green 'X' indicates that the associated task is performed in the specified environment, while a red '--' indicates that the task is not performed. For each environment, the column of the rewarded task is highlighted in green, and the column of the punished task is highlighted in red. A green 'X' in a green column or a red '--' in a red column is optimal. Each phenotype has a color code, which is used the visualization below. Note that the first four rows are non-plastic phenotypes, rows 5-8 exhibit partially beneficial plasticity, and row 9 is optimally beneficial. Rows 10-11 are mostly neutral, while rows 12-16 are detrimental forms of plasticity.</p>
