--- a/index.html
+++ b/index.html
@@ -77,7 +77,19 @@
                   <img src="imgs/task-profiles.png" alt="Legend" class="img-responsive"></img>
                 </div>
                 <div class="text-box">
-                  <p>Enumeration of all possible phenotypic states. Each row represents a distinct phenotype. A green 'X' indicates that the associated task is performed in the specified environment, while a red '--' indicates that the task is not performed. For each environment, the column of the rewarded task is highlighted in green, and the column of the punished task is highlighted in red. A green 'X' in a green column or a red '--' in a red column is optimal. Each phenotype has a color code, which is used the visualization below. Note that the first four rows are non-plastic phenotypes, rows 5-8 exhibit partially beneficial plasticity, and row 9 is optimally beneficial. Rows 10-11 are mostly neutral, while rows 12-16 are detrimental forms of plasticity.</p>
+                  <p>
+                    Enumeration of all possible phenotypic states.
+                    Each row represents a distinct phenotype.
+                    An 'X' indicates that the associated task is performed in the specified environment,
+                    while a '--' indicates that the task is not performed.
+                    For each environment, the column of the rewarded task is highlighted in light purple,
+                    and the column of the punished task is highlighted in orange.
+                    An 'X' in a rewarded column and a '--' in a punished column is optimal.
+                    Each phenotype has a color code, which is used the visualization below.
+                    Note that the first four rows are non-plastic phenotypes,
+                    rows 5-8 exhibit partially beneficial plasticity, and row 9 is optimally beneficial.
+                    Rows 10-11 are mostly neutral, while rows 12-16 are detrimental forms of plasticity.
+                  </p>
                 </div>
               </div>
             </div>
